    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/scrollViewStyle" >
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical"
        android:baselineAligned="@color/background_color">

        <!--  <fragment
	        android:id="@+id/searchFragment"
	        android:name="esgi.project.ratpdroid.SearchFragment"
	        android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:layout_margin="10dp">
    	</fragment> -->
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/buttonRER"
                style="@style/buttonSelectTransportStyle"
                android:drawableTop="@drawable/rer"
                android:onClick="onButtonRERClick"
                android:text="@string/rer" />

            <Button
                android:id="@+id/buttonBUS"
                style="@style/buttonSelectTransportStyle"
                android:drawableTop="@drawable/bus"
                android:onClick="onButtonBUSClick"
                android:text="@string/bus" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/buttonMETRO"
                style="@style/buttonSelectTransportStyle"
                android:drawableTop="@drawable/metro"
                android:onClick="onButtonMETROClick"
                android:text="@string/metro" />

            <Button
                android:id="@+id/buttonTRAMWAY"
                style="@style/buttonSelectTransportStyle"
                android:drawableTop="@drawable/tramway"
                android:onClick="onButtonTRAMWAYClick"
                android:text="@string/tramway" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/buttonReset"
                style="@style/buttonSelectTransportStyle"
                android:drawableTop="@drawable/reset"
                android:onClick="onButtonResetClick"
                android:text="@string/reset" />
        </LinearLayout>
    </LinearLayout>
    </ScrollView>